Improve logic flow and make functions out of repeated code.

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -85,6 +85,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f3f67da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#     # If there is only one pair in the group, just connect it.\n",
+    "#     if len(group_of_pairs) == 1:\n",
+    "#         pair = group_of_pairs[0]\n",
+    "#         endpoint_1, endpoint_2, distance_nm = pair\n",
+    "\n",
+    "#         path, cost, distance_nm = connect_endpoints_with_best_path(\n",
+    "#             image=image,\n",
+    "#             mask=mask,\n",
+    "#             p2nm=p2nm,\n",
+    "#             endpoint_1=(endpoint_1[0], endpoint_1[1]),\n",
+    "#             endpoint_2=(endpoint_2[0], endpoint_2[1]),\n",
+    "#             endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
+    "#         )\n",
+    "\n",
+    "#         path_mask = np.zeros_like(mask, dtype=bool)\n",
+    "#         # Set the path to True\n",
+    "#         for y, x in path:\n",
+    "#             path_mask[y, x] = True\n",
+    "#         # Calculate the dilation iterations needed to reach the mean mask width\n",
+    "#         dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
+    "#         dilated_path_array = ndimage.binary_dilation(\n",
+    "#             path_mask,\n",
+    "#             iterations=dilation_radius,\n",
+    "#         )\n",
+    "\n",
+    "#         # Add the dilated path to the whole mask\n",
+    "#         mask = mask | dilated_path_array\n",
+    "\n",
+    "#         # Update the skeleton to include the path\n",
+    "#         for y, x in path:\n",
+    "#             skeleton[y, x] = True\n",
+    "\n",
+    "#         continue  # move to next group\n",
+    "\n",
+    "#     # For groups with multiple pairs, we need to find a way to connect all endpoints together.\n",
+    "\n",
+    "#     # find the hard-connected endpoints in this group, defined as the endpoints that are connected via the\n",
+    "#     # skeleton already, within a configurable hard connection distance.\n",
+    "#     endpoint_hard_connection_distance_px = int(endpoint_hard_connection_distance_nm / p2nm)\n",
+    "\n",
+    "# #     path_mask = np.zeros_like(mask, dtype=bool)\n",
+    "# #     # Set the path to True\n",
+    "# #     for y, x in path:\n",
+    "# #         path_mask[y, x] = True\n",
+    "# #     # Calculate the dilation iterations needed to reach the mean mask width\n",
+    "# #     dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
+    "# #     dilated_path_array = ndimage.binary_dilation(\n",
+    "# #         path_mask,\n",
+    "# #         iterations=dilation_radius,\n",
+    "# #     )\n",
+    "\n",
+    "# #     # Add the dilated path to the whole mask\n",
+    "# #     mask = mask | dilated_path_array\n",
+    "\n",
+    "# #     # Update the skeleton to include the path\n",
+    "# #     for y, x in path:\n",
+    "# #         skeleton[y, x] = True\n",
+    "\n",
+    "# # fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "# # plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "# # grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
+    "# # plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
+    "# # skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
+    "# # plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
+    "# # plt.title(\"skeleton after connecting loose ends\")\n",
+    "# # plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c56e9b36",
    "metadata": {},
    "outputs": [],
@@ -119,22 +194,22 @@
     "    image: npt.NDArray[np.float32],\n",
     "    mask: npt.NDArray[np.bool_],\n",
     "    p2nm: float,\n",
-    "    endpoint_1: tuple[int, int],\n",
-    "    endpoint_2: tuple[int, int],\n",
+    "    endpoint_1_coords: tuple[int, int],\n",
+    "    endpoint_2_coords: tuple[int, int],\n",
     "    endpoint_connection_cost_map_height_maximum: float,\n",
     ") -> tuple[npt.NDArray[np.uint8], float, float]:\n",
     "    # create a weight cost map from the image, where 0 is the maximum cost, and the lowest cost is configurable.\n",
     "    # first create a crop around the two endpoints to speed up pathfinding\n",
     "    cost_map_bbox_padding_px = 10\n",
-    "    min_y = max(0, min(endpoint_1[0], endpoint_2[0]) - cost_map_bbox_padding_px)\n",
-    "    max_y = min(image.shape[0], max(endpoint_1[0], endpoint_2[0]) + cost_map_bbox_padding_px)\n",
-    "    min_x = max(0, min(endpoint_1[1], endpoint_2[1]) - cost_map_bbox_padding_px)\n",
-    "    max_x = min(image.shape[1], max(endpoint_1[1], endpoint_2[1]) + cost_map_bbox_padding_px)\n",
+    "    min_y = max(0, min(endpoint_1_coords[0], endpoint_2_coords[0]) - cost_map_bbox_padding_px)\n",
+    "    max_y = min(image.shape[0], max(endpoint_1_coords[0], endpoint_2_coords[0]) + cost_map_bbox_padding_px)\n",
+    "    min_x = max(0, min(endpoint_1_coords[1], endpoint_2_coords[1]) - cost_map_bbox_padding_px)\n",
+    "    max_x = min(image.shape[1], max(endpoint_1_coords[1], endpoint_2_coords[1]) + cost_map_bbox_padding_px)\n",
     "    cost_map = image[min_y:max_y, min_x:max_x]\n",
     "    mask_crop = mask[min_y:max_y, min_x:max_x]\n",
     "    image_crop = image[min_y:max_y, min_x:max_x]\n",
-    "    local_endpoint_1 = (endpoint_1[0] - min_y, endpoint_1[1] - min_x)\n",
-    "    local_endpoint_2 = (endpoint_2[0] - min_y, endpoint_2[1] - min_x)\n",
+    "    local_endpoint_1 = (endpoint_1_coords[0] - min_y, endpoint_1_coords[1] - min_x)\n",
+    "    local_endpoint_2 = (endpoint_2_coords[0] - min_y, endpoint_2_coords[1] - min_x)\n",
     "    # clip it to the height bounds\n",
     "    cost_map = np.clip(\n",
     "        cost_map,\n",
@@ -165,6 +240,33 @@
     "    path_distance_nm = calculate_pixel_path_distance(path) * p2nm\n",
     "\n",
     "    return path, cost, path_distance_nm\n",
+    "\n",
+    "\n",
+    "def fill_mask_gap_using_path(\n",
+    "    mask: npt.NDArray[np.bool_],\n",
+    "    p2nm: float,\n",
+    "    path: npt.NDArray[np.uint8],\n",
+    "    mean_mask_pixel_width: float,\n",
+    ") -> npt.NDArray[np.bool_]:\n",
+    "    \"\"\"\n",
+    "    Fill a gap in a binary mask using a given path, dilating the path to match the mean mask width.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    path_mask = np.zeros_like(mask, dtype=bool)\n",
+    "    # Set the path to True\n",
+    "    for y, x in path:\n",
+    "        path_mask[y, x] = True\n",
+    "    # Calculate the dilation iterations needed to reach the mean mask width\n",
+    "    dilation_radius = int(np.ceil(mean_mask_pixel_width / 2))\n",
+    "    dilated_path_array = ndimage.binary_dilation(\n",
+    "        path_mask,\n",
+    "        iterations=dilation_radius,\n",
+    "    )\n",
+    "\n",
+    "    # Add the dilated path to the whole mask\n",
+    "    filled_mask = mask | dilated_path_array\n",
+    "\n",
+    "    return filled_mask\n",
     "\n",
     "\n",
     "def group_endpoints(\n",
@@ -306,90 +408,67 @@
     "\n",
     "    # For each endpoint, determine if any others are close enough to connect.\n",
     "    nearby_endpoint_pairs: list[tuple[int, int, float]] = []\n",
-    "    for i, endpoint_1 in endpoints.items():\n",
-    "        for j, endpoint_2 in endpoints.items():\n",
+    "    for i, endpoint_1_coords in endpoints.items():\n",
+    "        for j, endpoint_2_coords in endpoints.items():\n",
     "            if i >= j:\n",
     "                continue  # avoid double counting\n",
-    "            distance_nm = np.linalg.norm((np.array(endpoint_1.position) - np.array(endpoint_2.position)) * p2nm)\n",
+    "            distance_nm = np.linalg.norm(\n",
+    "                (np.array(endpoint_1_coords.position) - np.array(endpoint_2_coords.position)) * p2nm\n",
+    "            )\n",
     "            if distance_nm <= endpoint_connection_distance_nm:\n",
-    "                nearby_endpoint_pairs.append((endpoint_1.id, endpoint_2.id, distance_nm))\n",
+    "                nearby_endpoint_pairs.append((endpoint_1_coords.id, endpoint_2_coords.id, distance_nm))\n",
     "\n",
     "    # Group nearby endpoint pairs into connection groups\n",
     "    connection_groups = group_endpoints(endpoints=endpoints, close_pairs=nearby_endpoint_pairs)\n",
     "    print(f\"connection groups:\")\n",
     "    print(connection_groups)\n",
     "\n",
-    "    # # Now consider each group and decide how to connect them.\n",
-    "    # # Iterate over each possible pair\n",
-    "    # for group_index, group_of_pairs in enumerate(groups_of_potentially_connected_endpoint_pairs):\n",
-    "    #     print(f\"processing group {group_index} of {len(groups_of_potentially_connected_endpoint_pairs)}\")\n",
+    "    # Now consider each group and decide how to connect them.\n",
     "\n",
-    "    #     # If there is only one pair in the group, just connect it.\n",
-    "    #     if len(group_of_pairs) == 1:\n",
-    "    #         pair = group_of_pairs[0]\n",
-    "    #         endpoint_1, endpoint_2, distance_nm = pair\n",
+    "    for group_id, connection_group in connection_groups.items():\n",
+    "        print(f\"Processing connection group {group_id} with endpoints: {connection_group.endpoints}\")\n",
     "\n",
-    "    #         path, cost, distance_nm = connect_endpoints_with_best_path(\n",
-    "    #             image=image,\n",
-    "    #             mask=mask,\n",
-    "    #             p2nm=p2nm,\n",
-    "    #             endpoint_1=(endpoint_1[0], endpoint_1[1]),\n",
-    "    #             endpoint_2=(endpoint_2[0], endpoint_2[1]),\n",
-    "    #             endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
-    "    #         )\n",
+    "        # If there are only two endpoints in the group, we can directly connect them.\n",
+    "        if len(connection_group.endpoints) == 2:\n",
     "\n",
-    "    #         path_mask = np.zeros_like(mask, dtype=bool)\n",
-    "    #         # Set the path to True\n",
-    "    #         for y, x in path:\n",
-    "    #             path_mask[y, x] = True\n",
-    "    #         # Calculate the dilation iterations needed to reach the mean mask width\n",
-    "    #         dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
-    "    #         dilated_path_array = ndimage.binary_dilation(\n",
-    "    #             path_mask,\n",
-    "    #             iterations=dilation_radius,\n",
-    "    #         )\n",
+    "            pair = connection_group.close_endpoint_pairs[0]\n",
+    "            endpoint_1_id, endpoint_2_id = pair\n",
+    "            endpoint_1_coords = connection_group.endpoints[endpoint_1_id]\n",
+    "            endpoint_2_coords = connection_group.endpoints[endpoint_2_id]\n",
     "\n",
-    "    #         # Add the dilated path to the whole mask\n",
-    "    #         mask = mask | dilated_path_array\n",
+    "            path, cost, distance_nm = connect_endpoints_with_best_path(\n",
+    "                image=image,\n",
+    "                mask=mask,\n",
+    "                p2nm=p2nm,\n",
+    "                endpoint_1_coords=endpoint_1_coords.position,\n",
+    "                endpoint_2_coords=endpoint_2_coords.position,\n",
+    "                endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
+    "            )\n",
     "\n",
-    "    #         # Update the skeleton to include the path\n",
-    "    #         for y, x in path:\n",
-    "    #             skeleton[y, x] = True\n",
+    "            # Update the skeleton to include the path\n",
+    "            for y, x in path:\n",
+    "                skeleton[y, x] = True\n",
     "\n",
-    "    #         continue  # move to next group\n",
+    "            # Fill the mask gap using the path\n",
+    "            mask = fill_mask_gap_using_path(\n",
+    "                mask=mask,\n",
+    "                p2nm=p2nm,\n",
+    "                path=path,\n",
+    "                mean_mask_pixel_width=mean_mask_width_px,\n",
+    "            )\n",
+    "            continue\n",
     "\n",
-    "    #     # For groups with multiple pairs, we need to find a way to connect all endpoints together.\n",
+    "        # for groups with more than two endpoints, we need more analysis.\n",
+    "        if len(connection_group.endpoints) == 4:\n",
     "\n",
-    "    #     # find the hard-connected endpoints in this group, defined as the endpoints that are connected via the\n",
-    "    #     # skeleton already, within a configurable hard connection distance.\n",
-    "    #     endpoint_hard_connection_distance_px = int(endpoint_hard_connection_distance_nm / p2nm)\n",
+    "            # we can do this one\n",
     "\n",
-    "    # #     path_mask = np.zeros_like(mask, dtype=bool)\n",
-    "    # #     # Set the path to True\n",
-    "    # #     for y, x in path:\n",
-    "    # #         path_mask[y, x] = True\n",
-    "    # #     # Calculate the dilation iterations needed to reach the mean mask width\n",
-    "    # #     dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
-    "    # #     dilated_path_array = ndimage.binary_dilation(\n",
-    "    # #         path_mask,\n",
-    "    # #         iterations=dilation_radius,\n",
-    "    # #     )\n",
+    "            continue\n",
     "\n",
-    "    # #     # Add the dilated path to the whole mask\n",
-    "    # #     mask = mask | dilated_path_array\n",
-    "\n",
-    "    # #     # Update the skeleton to include the path\n",
-    "    # #     for y, x in path:\n",
-    "    # #         skeleton[y, x] = True\n",
-    "\n",
-    "    # # fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "    # # plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "    # # grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
-    "    # # plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
-    "    # # skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
-    "    # # plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
-    "    # # plt.title(\"skeleton after connecting loose ends\")\n",
-    "    # # plt.show()"
+    "        if len(connection_group.endpoints) != 4:\n",
+    "            raise NotImplementedError(\n",
+    "                f\"Connection groups with {len(connection_group.endpoints)} endpoints not yet implemented.\"\n",
+    "            )"
    ]
   }
  ],
