[figures] save all csv data for whole plots for the extended data figure 3

--- a/hariborings/stats_comparison.ipynb
+++ b/hariborings/stats_comparison.ipynb
@@ -520,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new",
+   "display_name": "dl-metal",
    "language": "python",
    "name": "python3"
   },
