[figures] save curvature data whole plot csv data

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -57,6 +57,11 @@
     "EXT_FIG_DATA_SAVE_DIR = Path(\n",
     "    \"/Users/sylvi/topo_data/cas9-paper-our-response-to-reviewers/20250805-quentin-reviewer-response/figure_ext_3_images/high_res_curvature_graphs\"\n",
     ")\n",
+    "EXT_FIG_DATA_CSV_SAVE_DIR = Path(\n",
+    "    \"/Users/sylvi/topo_data/cas9-paper-our-response-to-reviewers/20250805-quentin-reviewer-response/figure_ext_3_images/csv_data_curvature\"\n",
+    ")\n",
+    "assert EXT_FIG_DATA_SAVE_DIR.exists()\n",
+    "assert EXT_FIG_DATA_CSV_SAVE_DIR.exists()\n",
     "MAX_PX_TO_NM = 10.0\n",
     "\n",
     "save_dirs = {\n",
@@ -121,9 +126,7 @@
     "        pad_bottom = pad_height - pad_top\n",
     "        pad_left = pad_width // 2\n",
     "        pad_right = pad_width - pad_left\n",
-    "        padded_image = np.pad(\n",
-    "            image, ((pad_top, pad_bottom), (pad_left, pad_right)), mode=\"constant\", constant_values=0\n",
-    "        )\n",
+    "        padded_image = np.pad(image, ((pad_top, pad_bottom), (pad_left, pad_right)), mode=\"constant\", constant_values=0)\n",
     "        return padded_image, (pad_top, pad_bottom, pad_left, pad_right)\n",
     "    return image, (0, 0, 0, 0)"
    ]
@@ -1070,18 +1073,14 @@
     "    data1 = data_df[data_df[\"sample_type\"] == sample_type_1][column]\n",
     "    data2 = data_df[data_df[\"sample_type\"] == sample_type_2][column]\n",
     "    t_stat, p_value = ttest_ind(data1, data2, equal_var=False)\n",
-    "    print(\n",
-    "        f\"\\n\\nT-test between [{sample_type_1}] and [{sample_type_2}] for [{column}]: T={t_stat:.4f}, p={p_value:.4f}\"\n",
-    "    )\n",
+    "    print(f\"\\n\\nT-test between [{sample_type_1}] and [{sample_type_2}] for [{column}]: T={t_stat:.4f}, p={p_value:.4f}\")\n",
     "    if p_value < 0.05:\n",
     "        print(\"Significant differences found\")\n",
     "    else:\n",
     "        print(\"No significant differences found\")\n",
     "\n",
     "\n",
-    "def mann_whitney_u_test_between_two_samples(\n",
-    "    data_df: pd.DataFrame, sample_type_1: str, sample_type_2: str, column: str\n",
-    "):\n",
+    "def mann_whitney_u_test_between_two_samples(data_df: pd.DataFrame, sample_type_1: str, sample_type_2: str, column: str):\n",
     "    data1 = data_df[data_df[\"sample_type\"] == sample_type_1][column]\n",
     "    data2 = data_df[data_df[\"sample_type\"] == sample_type_2][column]\n",
     "    u_stat, p_value = scipy_stats.mannwhitneyu(data1, data2, alternative=\"two-sided\")\n",
@@ -1541,7 +1540,7 @@
     "        / f\"grain_central_curvature_plot_{grain_dict['sample_type']}_{grain_dict['grain_index']}.png\",\n",
     "        dpi=dpi,\n",
     "        bbox_inches=\"tight\",\n",
-    "        pad_inches=0\n",
+    "        pad_inches=0,\n",
     "    )\n",
     "    plt.show()\n",
     "\n",
@@ -1578,6 +1577,17 @@
     "# save the figure\n",
     "plt.savefig(EXT_FIG_DATA_SAVE_DIR / f\"ot1_ot2_central_mean_curvature_violin_plot.png\", dpi=dpi)\n",
     "plt.show()\n",
+    "\n",
+    "# Save the plot data to csv to be able to plot it later\n",
+    "df_middle_curvature_stats_ot1_ot2.to_csv(\n",
+    "    EXT_FIG_DATA_CSV_SAVE_DIR / f\"ot1_ot2_central_mean_curvature_data.csv\", index=False\n",
+    ")\n",
+    "# save the plot data for central mean curvature plot only\n",
+    "df_central_mean_curvature_plot_data = df_middle_curvature_stats_ot1_ot2[[\"sample_type\", \"mean_curvature\"]]\n",
+    "df_central_mean_curvature_plot_data.to_csv(\n",
+    "    EXT_FIG_DATA_CSV_SAVE_DIR / f\"ot1_ot2_central_mean_curvature_plot_data.csv\", index=False\n",
+    ")\n",
+    "\n",
     "\n",
     "# print the Ns\n",
     "samples = df_middle_curvature_stats_ot1_ot2[\"sample_type\"].value_counts()\n",
