handle 4-node close proximity via iteratively testing paths and choosing shortest one

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -78,7 +78,7 @@
     "class ConnectionGroup(BaseModel):\n",
     "    id: int\n",
     "    endpoints: dict[int, Endpoint] = Field(default_factory=dict)\n",
-    "    hard_connected_endpoints: list[tuple[int, int]] = Field(default_factory=list)\n",
+    "    hard_connected_endpoints: list[tuple[int, int, float]] = Field(default_factory=list)\n",
     "    close_endpoint_pairs: list[tuple[int, int]] = Field(default_factory=list)"
    ]
   },
@@ -309,7 +309,62 @@
     "            close_endpoint_pairs=group_close_pairs,\n",
     "        )\n",
     "        connection_groups[group_id] = connection_group\n",
-    "    return connection_groups"
+    "    return connection_groups\n",
+    "\n",
+    "\n",
+    "def find_hard_connected_endpoints(\n",
+    "    skeleton: npt.NDArray[np.bool_],\n",
+    "    endpoints: dict[int, Endpoint],\n",
+    "    max_connection_distance_nm: float,\n",
+    "    p2nm: float,\n",
+    ") -> list[tuple[int, int, float]]:\n",
+    "    \"\"\"\n",
+    "    Find hard-connected endpoints (with distances) within a maximum connection distance in a skeleton.\n",
+    "\n",
+    "    Specifically, finds the pairs of endpoints, and the distances between them in nanometres, that are connected\n",
+    "    via the skeleton within the given maximum connection distance.\n",
+    "    \"\"\"\n",
+    "    hard_connected_endpoints: list[tuple[int, int, float]] = []\n",
+    "\n",
+    "    # Breadth-first search from each endpoint to find reachable endpoints within the max distance\n",
+    "    for endpoint_id, endpoint in endpoints.items():\n",
+    "        start_position = endpoint.position\n",
+    "        visited: set[tuple[int, int]] = set()\n",
+    "        queue: list[tuple[tuple[int, int], float]] = [(start_position, 0.0)]  # (position, distance_nm)\n",
+    "        while queue:\n",
+    "            current_position = queue.pop(0)\n",
+    "            current_coords, current_distance_nm = current_position\n",
+    "            # If alrady visited this position, skip it.\n",
+    "            if current_coords in visited:\n",
+    "                continue\n",
+    "            # Else add it to the visited set\n",
+    "            visited.add(current_coords)\n",
+    "            # Check if this position is another endpoint (not the start endpoint)\n",
+    "            for other_endpoint_id, other_endpoint in endpoints.items():\n",
+    "                if other_endpoint_id != endpoint_id and other_endpoint.position == current_coords:\n",
+    "                    # This is a hard-connection\n",
+    "                    hard_connected_endpoints.append((endpoint_id, other_endpoint_id, current_distance_nm))\n",
+    "            # Explore neighbours (8-connectivity)\n",
+    "            y, x = current_coords\n",
+    "            for dy in [-1, 0, 1]:\n",
+    "                for dx in [-1, 0, 1]:\n",
+    "                    if dy == 0 and dx == 0:\n",
+    "                        # Skip current position\n",
+    "                        continue\n",
+    "                    neighbour_coords = (y + dy, x + dx)\n",
+    "                    # Check if neighbour is within bounds of the skeleton and is part of the skeleton's true pixels\n",
+    "                    if (\n",
+    "                        0 <= neighbour_coords[0] < skeleton.shape[0]\n",
+    "                        and 0 <= neighbour_coords[1] < skeleton.shape[1]\n",
+    "                        and skeleton[neighbour_coords]\n",
+    "                    ):\n",
+    "                        # Calculate distance to neighbour, taking into account diagonal distance\n",
+    "                        step_distance_nm = np.sqrt(dy**2 + dx**2) * p2nm\n",
+    "                        new_distance_nm = current_distance_nm + step_distance_nm\n",
+    "                        # If within max distance, add to queue\n",
+    "                        if new_distance_nm <= max_connection_distance_nm:\n",
+    "                            queue.append((neighbour_coords, new_distance_nm))\n",
+    "    return hard_connected_endpoints"
    ]
   },
   {
@@ -456,19 +511,159 @@
     "                path=path,\n",
     "                mean_mask_pixel_width=mean_mask_width_px,\n",
     "            )\n",
+    "            # done with this group, move on\n",
     "            continue\n",
     "\n",
     "        # for groups with more than two endpoints, we need more analysis.\n",
     "        if len(connection_group.endpoints) == 4:\n",
     "\n",
-    "            # we can do this one\n",
+    "            # We need to identify the hard-connected endpoints in the group, defined as those endpoints that are\n",
+    "            # connected via the skeleton already within a configurable distance.\n",
     "\n",
+    "            # For each endpoint in the group, see if we can navigate to any other endpoint along the skeleton\n",
+    "            # within the hard-connection distance.\n",
+    "\n",
+    "            hard_connected_endpoints: list[tuple[int, int, float]] = find_hard_connected_endpoints(\n",
+    "                skeleton=skeleton,\n",
+    "                endpoints=connection_group.endpoints,\n",
+    "                max_connection_distance_nm=endpoint_hard_connection_distance_nm,\n",
+    "                p2nm=p2nm,\n",
+    "            )\n",
+    "\n",
+    "            connection_group.hard_connected_endpoints = hard_connected_endpoints\n",
+    "            print(f\"hard connected endpoints in group {group_id}: {hard_connected_endpoints}\")\n",
+    "\n",
+    "            # Now we have the hard-connections, we can identify the start and end nodes by being the only nodes that\n",
+    "            # do not have hard-connections to the other nodes in the group.\n",
+    "            # Do this by making a set of all endpoints, and removing those that are in hard connections.\n",
+    "            non_hard_connected_endpoint_ids: set[int] = set(connection_group.endpoints.keys())\n",
+    "            for endpoint_1_id, endpoint_2_id, _ in connection_group.hard_connected_endpoints:\n",
+    "                if endpoint_1_id in non_hard_connected_endpoint_ids:\n",
+    "                    non_hard_connected_endpoint_ids.remove(endpoint_1_id)\n",
+    "                if endpoint_2_id in non_hard_connected_endpoint_ids:\n",
+    "                    non_hard_connected_endpoint_ids.remove(endpoint_2_id)\n",
+    "\n",
+    "            if len(non_hard_connected_endpoint_ids) != 2:\n",
+    "                raise ValueError(\n",
+    "                    f\"For a 4-node endpoint group, expected 2 non-hard-connected endpoints,\"\n",
+    "                    f\"found {len(non_hard_connected_endpoint_ids)}. Need to update the algorithm.\"\n",
+    "                )\n",
+    "\n",
+    "            # So now we have the start and end nodes identified.\n",
+    "            start_node_id, end_node_id = non_hard_connected_endpoint_ids\n",
+    "            start_node = connection_group.endpoints[start_node_id]\n",
+    "            end_node = connection_group.endpoints[end_node_id]\n",
+    "\n",
+    "            # Find the best path between start and end node, traversing all nodes, using the shortest distance as\n",
+    "            # the best-path criteria.\n",
+    "\n",
+    "            # Since this is just a 4-node system, with a start and end node, there are only two possible paths:\n",
+    "            # start -> node A -> node B -> end\n",
+    "            # start -> node B -> node A -> end\n",
+    "\n",
+    "            # The metrics for quality of the options are: total length, and total cost.\n",
+    "\n",
+    "            # For each option, pathfind using height cost maps to connect the disconnected nodes.\n",
+    "            # Create a list of possible paths by order of node traversal\n",
+    "            node_ids = list(connection_group.endpoints.keys())\n",
+    "            node_ids.remove(start_node_id)\n",
+    "            node_ids.remove(end_node_id)\n",
+    "            node_a_id = node_ids[0]\n",
+    "            node_b_id = node_ids[1]\n",
+    "            path_options = [\n",
+    "                [start_node_id, node_a_id, node_b_id, end_node_id],\n",
+    "                [start_node_id, node_b_id, node_a_id, end_node_id],\n",
+    "            ]\n",
+    "            path_metrics: list[dict[str, Any]] = []  # to store metrics for each path option\n",
+    "            for path_option in path_options:\n",
+    "                total_cost = 0.0\n",
+    "                total_distance_nm = 0.0\n",
+    "                path_segments: list[tuple[int, int, float, npt.NDArray[np.uint8]] | None] = []\n",
+    "                # Iterate through each segment of the path\n",
+    "                for i in range(len(path_option) - 1):\n",
+    "                    hard_connection_current_distance_nm: float | None = None\n",
+    "                    segment_start_id = path_option[i]\n",
+    "                    segment_end_id = path_option[i + 1]\n",
+    "                    segment_start_coords = connection_group.endpoints[segment_start_id].position\n",
+    "                    segment_end_coords = connection_group.endpoints[segment_end_id].position\n",
+    "                    # Check if the segment is a hard-connection\n",
+    "                    is_hard_connection = False\n",
+    "                    for hard_connection in connection_group.hard_connected_endpoints:\n",
+    "                        hard_connection_start_id, hard_connection_end_id, hard_connection_distance_nm = hard_connection\n",
+    "                        if (\n",
+    "                            segment_start_id == hard_connection_start_id and segment_end_id == hard_connection_end_id\n",
+    "                        ) or (\n",
+    "                            segment_start_id == hard_connection_end_id and segment_end_id == hard_connection_start_id\n",
+    "                        ):\n",
+    "                            is_hard_connection = True\n",
+    "                            hard_connection_current_distance_nm = hard_connection_distance_nm\n",
+    "                            break\n",
+    "                    if is_hard_connection:\n",
+    "                        print(f\"segment {segment_start_id} to {segment_end_id} is a hard-connection\")\n",
+    "                        # For hard connections, just store the distance of the path between the two\n",
+    "                        assert hard_connection_current_distance_nm is not None\n",
+    "                        total_distance_nm += hard_connection_current_distance_nm\n",
+    "                        # Add to path segments\n",
+    "                        path_segments.append(\n",
+    "                            (segment_start_id, segment_end_id, hard_connection_current_distance_nm, None)\n",
+    "                        )\n",
+    "                    else:\n",
+    "                        # pathfind between the two endpoints\n",
+    "                        path, cost, distance_nm = connect_endpoints_with_best_path(\n",
+    "                            image=image,\n",
+    "                            mask=mask,\n",
+    "                            p2nm=p2nm,\n",
+    "                            endpoint_1_coords=segment_start_coords,\n",
+    "                            endpoint_2_coords=segment_end_coords,\n",
+    "                            endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
+    "                        )\n",
+    "                        total_cost += cost\n",
+    "                        total_distance_nm += distance_nm\n",
+    "                        # Add to path segments\n",
+    "                        path_segments.append((segment_start_id, segment_end_id, distance_nm, path))\n",
+    "                # Store the metrics for this path option\n",
+    "                path_metrics.append(\n",
+    "                    {\n",
+    "                        \"path_option\": path_option,\n",
+    "                        \"total_cost\": total_cost,\n",
+    "                        \"total_distance_nm\": total_distance_nm,\n",
+    "                        \"path_segments\": path_segments,\n",
+    "                    }\n",
+    "                )\n",
+    "            # Select the best path option based on the metrics\n",
+    "            best_path_option = min(path_metrics, key=lambda x: x[\"total_distance_nm\"])\n",
+    "            print(f\"best path option: {best_path_option}\")\n",
+    "\n",
+    "            # With the best path option, update the skeleton and mask\n",
+    "            for segment in best_path_option[\"path_segments\"]:\n",
+    "                segment_start_id, segment_end_id, distance_nm, path = segment\n",
+    "                if path is not None:\n",
+    "                    # Non-hard-connection so needs connecting in the skeleton and mask\n",
+    "                    # Update the skeleton to include the path\n",
+    "                    for y, x in path:\n",
+    "                        skeleton[y, x] = True\n",
+    "                    # Fill the mask gap using the path\n",
+    "                    mask = fill_mask_gap_using_path(\n",
+    "                        mask=mask,\n",
+    "                        p2nm=p2nm,\n",
+    "                        path=path,\n",
+    "                        mean_mask_pixel_width=mean_mask_width_px,\n",
+    "                    )\n",
+    "            # done with this group, move on\n",
     "            continue\n",
     "\n",
-    "        if len(connection_group.endpoints) != 4:\n",
-    "            raise NotImplementedError(\n",
-    "                f\"Connection groups with {len(connection_group.endpoints)} endpoints not yet implemented.\"\n",
-    "            )"
+    "        raise NotImplementedError(\n",
+    "            f\"Connection groups with {len(connection_group.endpoints)} endpoints not yet implemented.\"\n",
+    "        )\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "    plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "    grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
+    "    plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
+    "    skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
+    "    plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
+    "    plt.title(\"skeleton after connecting loose ends\")\n",
+    "    plt.show()"
    ]
   }
  ],
