fix some typing

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5162c7e0",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,7 @@
     "from scipy import ndimage\n",
     "import networkx as nx\n",
     "from topostats.io import LoadScans\n",
+    "from skimage.graph import route_through_array\n",
     "from topostats.plottingfuncs import Colormap\n",
     "from topostats.utils import convolve_skeleton\n",
     "from topostats.mask_manipulation import smooth_mask\n",
@@ -222,8 +223,6 @@
     "    cost_map = cost_map / endpoint_connection_cost_map_height_maximum\n",
     "\n",
     "    # find the lowest cost path between the two endpoints\n",
-    "    from skimage.graph import route_through_array\n",
-    "\n",
     "    path, cost = route_through_array(\n",
     "        cost_map,\n",
     "        start=local_endpoint_1,\n",
@@ -244,7 +243,6 @@
     "\n",
     "def fill_mask_gap_using_path(\n",
     "    mask: npt.NDArray[np.bool_],\n",
-    "    p2nm: float,\n",
     "    path: npt.NDArray[np.uint8],\n",
     "    mean_mask_pixel_width: float,\n",
     ") -> npt.NDArray[np.bool_]:\n",
@@ -578,7 +576,7 @@
     "            for path_option in path_options:\n",
     "                total_cost = 0.0\n",
     "                total_distance_nm = 0.0\n",
-    "                path_segments: list[tuple[int, int, float, npt.NDArray[np.uint8]] | None] = []\n",
+    "                path_segments: list[tuple[int, int, float, npt.NDArray[np.uint8] | None]] = []\n",
     "                # Iterate through each segment of the path\n",
     "                for i in range(len(path_option) - 1):\n",
     "                    hard_connection_current_distance_nm: float | None = None\n",
@@ -645,7 +643,6 @@
     "                    # Fill the mask gap using the path\n",
     "                    mask = fill_mask_gap_using_path(\n",
     "                        mask=mask,\n",
-    "                        p2nm=p2nm,\n",
     "                        path=path,\n",
     "                        mean_mask_pixel_width=mean_mask_width_px,\n",
     "                    )\n",
@@ -655,7 +652,7 @@
     "        raise NotImplementedError(\n",
     "            f\"Connection groups with {len(connection_group.endpoints)} endpoints not yet implemented.\"\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    fig, ax = plt.subplots(figsize=(20, 20))\n",
     "    plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "    grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
